@@ -11,21 +11,27 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import org.json.JSONArray;
 import org.json.JSONObject;
 
 /**
- * Pure Java 21+ Ollama Chat - ZERO external dependencies
+ * Pure Java 21+ Ollama Chat - Centralized service logic.
+ *
+ * @evo:1:1 reason=cache-and-refactor-ollama-service
  */
 public class OllamaService {
 
-    private final String url;
     private final String baseUrl;
-    private final String model;
+    private String model;
     private final HttpClient httpClient;
     private final List<Message> messages = new ArrayList<>();
+
+    private List<OllamaModel> cachedModels = null;
+    private long lastModelRefresh = 0;
+    private static final long CACHE_TTL = Duration.ofMinutes(5).toMillis();
 
     // Advanced options
     private float temperature = 0.7f;
@@ -35,19 +41,28 @@ public class OllamaService {
     private float repeatPenalty = 1.1f;
 
     public OllamaService(String url, String model) {
-        this.baseUrl = url != null ? url : "http://localhost:11434";
-        if (this.baseUrl.endsWith("/api/chat")) {
-            this.url = this.baseUrl;
-        } else {
-            this.url = this.baseUrl + (this.baseUrl.endsWith("/") ? "" : "/") + "api/chat";
-        }
-        this.model = model != null ? model : "llama3.2:3b";
+        this.baseUrl = (url != null && !url.isEmpty()) ? url : "http://localhost:11434";
+        this.model = (model != null && !model.isEmpty()) ? model : "llama3.2:3b";
         this.httpClient = HttpClient.newBuilder()
                 .connectTimeout(Duration.ofSeconds(10))
                 .build();
 
         // Optional system prompt
         messages.add(new Message("system", "You are a concise, helpful Java programming assistant."));
+    }
+
+    public String getBaseUrl() {
+        return baseUrl;
+    }
+
+    public String getModel() {
+        return model;
+    }
+
+    public void setModel(String model) {
+        if (model != null && !model.isEmpty()) {
+            this.model = model;
+        }
     }
 
     public OllamaService setTemperature(float temperature) {
@@ -107,16 +122,8 @@ public class OllamaService {
                     .build();
             HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
             if (response.statusCode() == 200) {
-                String body = response.body();
-                // Simple parsing for {"version": "0.1.2"}
-                int start = body.indexOf("\"version\":\"");
-                if (start != -1) {
-                    start += 11;
-                    int end = body.indexOf("\"", start);
-                    if (end != -1) {
-                        return body.substring(start, end);
-                    }
-                }
+                JSONObject obj = new JSONObject(response.body());
+                return obj.optString("version", "Unknown");
             }
         } catch (Exception e) {
             // silent fail
@@ -127,12 +134,13 @@ public class OllamaService {
     public String chat(String userInput) throws Exception {
         messages.add(new Message("user", userInput));
 
-        String jsonBody = buildJsonRequest(false); // false = non-streaming for simplicity
+        String chatUrl = this.baseUrl + (this.baseUrl.endsWith("/") ? "" : "/") + "api/chat";
+        String jsonBody = buildChatJsonRequest(false);
 
         HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(this.url))
+                .uri(URI.create(chatUrl))
                 .header("Content-Type", "application/json")
-                .timeout(Duration.ofSeconds(60))
+                .timeout(Duration.ofSeconds(120))
                 .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
                 .build();
 
@@ -142,89 +150,69 @@ public class OllamaService {
             throw new RuntimeException("Ollama error: " + response.statusCode() + " - " + response.body());
         }
 
-        String responseBody = response.body();
-
-        // Simple parsing: extract content between "content\":\" and next \"
-        String answer = extractContent(responseBody);
+        JSONObject jsonResponse = new JSONObject(response.body());
+        String answer = jsonResponse.getJSONObject("message").getString("content");
 
         messages.add(new Message("assistant", answer));
 
         return answer;
     }
 
-    private String buildJsonRequest(boolean stream) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("{\"model\":\"").append(this.model).append("\",");
-        sb.append("\"stream\":").append(stream).append(",");
+    /**
+     * Sends a generation request (api/generate)
+     */
+    public String generate(String prompt) throws Exception {
+        String genUrl = this.baseUrl + (this.baseUrl.endsWith("/") ? "" : "/") + "api/generate";
 
-        // Add options
-        sb.append("\"options\":{");
-        sb.append("\"temperature\":").append(this.temperature).append(",");
-        sb.append("\"num_predict\":").append(this.numPredict).append(",");
-        sb.append("\"top_p\":").append(this.topP).append(",");
-        sb.append("\"top_k\":").append(this.topK).append(",");
-        sb.append("\"repeat_penalty\":").append(this.repeatPenalty);
-        sb.append("},");
+        JSONObject jsonObject = new JSONObject();
+        jsonObject.put("model", this.model);
+        jsonObject.put("prompt", prompt);
+        jsonObject.put("stream", false);
+        JSONObject options = new JSONObject();
+        options.put("temperature", this.temperature);
+        options.put("num_predict", this.numPredict);
+        jsonObject.put("options", options);
 
-        sb.append("\"messages\":[");
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(genUrl))
+                .header("Content-Type", "application/json")
+                .timeout(Duration.ofSeconds(120))
+                .POST(HttpRequest.BodyPublishers.ofString(jsonObject.toString()))
+                .build();
 
-        for (int i = 0; i < messages.size(); i++) {
-            Message msg = messages.get(i);
-            if (i > 0) sb.append(",");
-            sb.append("{\"role\":\"").append(msg.role)
-              .append("\",\"content\":\"")
-              .append(escapeJson(msg.content))
-              .append("\"}");
-        }
-        sb.append("]}");
-        return sb.toString();
-    }
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
-    private String extractContent(String jsonResponse) {
-        // Very simple parser for non-streaming response
-        int start = jsonResponse.indexOf("\"content\":\"");
-        if (start == -1) return "Error parsing response";
-
-        start += 11; // length of "content\":\"
-        int end = -1;
-
-        // Find next unescaped quote
-        for (int i = start; i < jsonResponse.length(); i++) {
-            if (jsonResponse.charAt(i) == '\"') {
-                if (i > 0 && jsonResponse.charAt(i - 1) == '\\') {
-                    // check if backslash is escaped
-                    int backslashCount = 0;
-                    for (int j = i - 1; j >= 0 && jsonResponse.charAt(j) == '\\'; j--) {
-                        backslashCount++;
-                    }
-                    if (backslashCount % 2 == 0) {
-                        end = i;
-                        break;
-                    }
-                } else {
-                    end = i;
-                    break;
-                }
-            }
+        if (response.statusCode() != 200) {
+            throw new RuntimeException("Ollama generate error: " + response.statusCode() + " - " + response.body());
         }
 
-        if (end == -1) return "Error parsing response";
-
-        String content = jsonResponse.substring(start, end);
-        // Replace escaped characters
-        return content.replace("\\n", "\n")
-                      .replace("\\\"", "\"")
-                      .replace("\\\\", "\\")
-                      .replace("\\t", "\t")
-                      .replace("\\r", "\r");
+        JSONObject jsonResponse = new JSONObject(response.body());
+        return jsonResponse.has("response") ? jsonResponse.getString("response") : jsonResponse.optString("solution", "");
     }
 
-    private String escapeJson(String text) {
-        return text.replace("\\", "\\\\")
-                   .replace("\"", "\\\"")
-                   .replace("\n", "\\n")
-                   .replace("\r", "\\r")
-                   .replace("\t", "\\t");
+    private String buildChatJsonRequest(boolean stream) {
+        JSONObject json = new JSONObject();
+        json.put("model", this.model);
+        json.put("stream", stream);
+
+        JSONObject options = new JSONObject();
+        options.put("temperature", this.temperature);
+        options.put("num_predict", this.numPredict);
+        options.put("top_p", this.topP);
+        options.put("top_k", this.topK);
+        options.put("repeat_penalty", this.repeatPenalty);
+        json.put("options", options);
+
+        JSONArray msgs = new JSONArray();
+        for (Message msg : messages) {
+            JSONObject m = new JSONObject();
+            m.put("role", msg.role);
+            m.put("content", msg.content);
+            msgs.put(m);
+        }
+        json.put("messages", msgs);
+
+        return json.toString();
     }
 
     public List<Message> getMessages() {
@@ -232,10 +220,7 @@ public class OllamaService {
     }
 
     /**
-     * Pulls a model from Ollama or a library (like HF).
-     * @param modelName The name of the model to pull.
-     * @param progressCallback Callback for progress updates (status, completed, total).
-     * @throws Exception if pulling fails.
+     * Pulls a model from Ollama.
      */
     public void pullModel(String modelName, Consumer<ProgressUpdate> progressCallback) throws Exception {
         String pullUrl = this.baseUrl + (this.baseUrl.endsWith("/") ? "" : "/") + "api/pull";
@@ -245,6 +230,7 @@ public class OllamaService {
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(pullUrl))
                 .header("Content-Type", "application/json")
+                .timeout(Duration.ofHours(1))
                 .POST(HttpRequest.BodyPublishers.ofString(requestBody.toString()))
                 .build();
 
@@ -263,45 +249,54 @@ public class OllamaService {
                     long completed = obj.optLong("completed", 0);
                     long total = obj.optLong("total", 0);
                     progressCallback.accept(new ProgressUpdate(status, completed, total));
-                    if ("success".equals(status)) {
-                        // done
-                    }
                 }
             });
         }
+        // Force refresh models list after pulling
+        refreshModels();
     }
 
     public static record ProgressUpdate(String status, long completed, long total) {}
 
     /**
-     * Fetches the list of models from the Ollama API.
+     * Fetches the list of models from the Ollama API, with caching.
      * @return List of OllamaModel objects.
      */
     public List<OllamaModel> loadModels() {
+        if (cachedModels != null && (System.currentTimeMillis() - lastModelRefresh < CACHE_TTL)) {
+            return cachedModels;
+        }
+        return refreshModels();
+    }
+
+    /**
+     * Forces a refresh of the models list.
+     */
+    public List<OllamaModel> refreshModels() {
         List<OllamaModel> result = new ArrayList<>();
         try {
-            URL url = new URL(this.baseUrl + (this.baseUrl.endsWith("/") ? "" : "/") + "api/tags");
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
+            String tagsUrl = this.baseUrl + (this.baseUrl.endsWith("/") ? "" : "/") + "api/tags";
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(tagsUrl))
+                    .timeout(Duration.ofSeconds(10))
+                    .GET()
+                    .build();
 
-            BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-            StringBuilder json = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                json.append(line);
-            }
-            reader.close();
-
-            JSONObject obj = new JSONObject(json.toString());
-            JSONArray models = obj.getJSONArray("models");
-            for (int i = 0; i < models.length(); i++) {
-                JSONObject m = models.getJSONObject(i);
-                String name = m.getString("name");
-                long size = m.optLong("size", 0);
-                result.add(new OllamaModel(name, size));
+            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() == 200) {
+                JSONObject obj = new JSONObject(response.body());
+                JSONArray models = obj.getJSONArray("models");
+                for (int i = 0; i < models.length(); i++) {
+                    JSONObject m = models.getJSONObject(i);
+                    String name = m.getString("name");
+                    long size = m.optLong("size", 0);
+                    result.add(new OllamaModel(name, size));
+                }
+                this.cachedModels = Collections.unmodifiableList(result);
+                this.lastModelRefresh = System.currentTimeMillis();
             }
         } catch (Exception e) {
-            // silent fail or log
+            // silent fail or return empty
         }
         return result;
     }
